# spacegame

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
lib/: IrrXML.lib  assimp-vc140-mt.exp  glfw3.lib  libcurl-d_imp.lib  libcurlpp.lib  zlibd.exp  zlibstaticd.lib
res/fonts/: console.fnt  console.ubfgdat  conthrax.fnt  conthrax.ubfgdat  gravity.fnt  gravity.ubfgdat  notosansmono.fnt  notosansmono.ubfgdat
res/models/SS1_OBJ/: SS1.mtl
res/models/card/: card.blend  card.blend1  card_stencil.mtl
res/models/card_back/: card_back.blend
res/models/icons/: hull.mtl
res/models/mining_platform/: mining_platform.blend  mining_platform.blend1  mining_platform.mtl
res/models/person/: person.mtl
res/models/quad/: quad.mtl  untitled.blend
res/models/resource_sphere/: resource_spehere.blend  resource_sphere.mtl
res/models/ships_icon/: ships_icon.blend  ships_icon.mtl
res/models/warp_diamond/: warp_diamond.blend  warp_diamond.mtl
src/: app.cpp  app.cpp.notusing  backward.cpp  camera.h  camera2.h  carddefinitions.h  cards.cpp  cards.h  client.cpp  client.h  cubemap.cpp  cubemap.h  drawable.cpp  drawable.h  event.cpp  event.h  fragment.frag  framebuffer.cpp  framebuffer.h  gamelogic.cpp  gamelogic.h  glad.c  has_property.h  input.cpp  input.h  instancedrawing.cpp  lamp.vert  lineobjload.h  logic.cpp  logic.h  main.cpp  main.cxx  mesh.cpp  mesh.h  model.cpp  model.h  nocopy.h  objectupdater.cpp  objectupdater.h  particles.cpp  (+25 more)
src/shaders/: anti.frag  blend.frag  blur.frag  brightcolor.frag  card.frag  card.vert  cardbg.frag  cardbg.vert  fragment.frag  framebuffer.frag  framebuffer.vert  instancedModel.vert  lamp.frag  lamp.vert  lighting.frag  particle.frag  particle.vert  simpleDiffuseLighting.frag  simpleDiffuseLighting.vert  stencil.frag  stencil.vert  text.frag  text.vert  uilighting.frag  vertex.vert  warp.frag  warp.vert  warp1.frag  warp2.frag
test/: client.cpp  logic.cpp  startgame.cxx  tests.cxx  testutil.h
